# cdbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
bot/: __init__.py  approval_router.py  audio_transcriber.py  codex_runner.py  config.py  conversation_state.py  debug_logging.py  discord_bot.py  helper.py  locales.json  localization.py  main.py  session_store.py  text.py
tests/: test_approval_router.py  test_codex_runner.py  test_conversation_state.py  test_debug_logging.py  test_discord_bot.py  test_locale_coverage.py  test_localization.py  test_main.py  test_session_store.py  test_text.py
