[project]
name = "cdbot"
version = "0.1.0"
description = "Codex wrapper for Discord"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "codex-app-server-sdk",
    "discord-py>=2.7.1",
    "openai>=1.0.0",
    "pydantic>=2.12",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pylint>=4.0.5",
    "pyright>=1.1.409",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[tool.uv.sources]
codex-app-server-sdk = { path = "vendor/codex/sdk/python" }

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]
include = ["bot", "tests", "main.py"]
exclude = ['.venv', '**/node_modules', '**/__pycache__', '**/.*', 'vendor']
